# talks

./: .gitignore  README.md
2023-12-20-adventures-in-egui-app-dev/manual_data_creator/: Cargo.toml  index.html  readme.md
2023-12-20-adventures-in-egui-app-dev/manual_data_creator/assets/: manifest.json  sw.js
2023-12-20-adventures-in-egui-app-dev/manual_data_creator/src/: app.rs  lib.rs  main.rs
2023-12-20-adventures-in-egui-app-dev/manual_data_creator/src/app/: data_conversion.rs  data_definition.rs  plot_zoom_reset.rs  status_msg.rs
2023-12-20-adventures-in-egui-app-dev/manual_data_creator/src/app/data_definition/: undo_manager.rs
2023-12-20-adventures-in-egui-app-dev/manual_data_creator/src/app/data_definition/undo_manager/: dequeue.rs  stack.rs
2025-03-19-performance/: Cargo.toml  README.md
2025-03-19-performance/benches/: fib_bench.rs
2025-03-19-performance/scripts/: bench_fib_20.py  bench_fib_20_better.py  get_fibs.py
2025-03-19-performance/src/: lib.rs  main.rs
2025-03-19-performance/src/fib/: fib_iterative.rs  fib_lookup.rs  fib_recursive.rs  mod.rs
actix-spring-simple-web-server-loadtest/: Considering Rust.odp
bevy-tanks-game/: README.md
c2rust-introduction/: C2Rust-introduction.210719.pptx
nushell/: Nushell in a Nutshell.pptx
progress-bars/: linya-progress-bars.org
rocket/: README.md
rust-idioms-gotchas-and-tips/: README.md
rust-web-tool-set/: README.md
unsafe-extern-c/: Dockerfile  LICENSE  README.md  start_ffi_playground.sh
unsafe-extern-c/playground/c_call_rust/: .gitignore  Cargo.toml  build.sh  main.c  run.sh
unsafe-extern-c/playground/c_call_rust/src/: lib.rs  lint.rs  not_unsafe.rs  story.rs
unsafe-extern-c/playground/rust_call_c/: Cargo.toml  build.rs
unsafe-extern-c/playground/rust_call_c/src/: hello_world.c  main.rs
