[package]
name = "manual_data_creator"
version = "0.1.0"
edition = "2021"


[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
egui_plot = { version = "0.23.0", features = ["serde"] }
ecolor = { version = "0.23.0", features = ["serde"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
image = "0.24.7"
matio-rs = "1.3.1"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

# Needed because of a problem in egui_plot that prevents it from compiling for wasm
[patch.crates-io]
egui = { git = "https://github.com/emilk/egui", branch = "master" }
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
ecolor = { git = "https://github.com/emilk/egui", branch = "master" }
egui_plot = { git = "https://github.com/emilk/egui", branch = "master" }

[dev-dependencies]
rstest = "0.18.2"
